# hogtess

./: .gitignore  CMakeLists.txt  README.md  TODO  coefs.cpp  coefs.hpp  input-mfem.cpp  input-mfem.hpp  input.hpp  main.cpp  main.hpp  palette.hpp  render.cpp  render.hpp  shader.hpp  shape.cpp  surface.cpp  surface.hpp  utility.hpp
cmake/: FindGLM.cmake  file2cpp  file2cpp.cmake  make-output-file.cmake
data/: beam.2.mesh  beam.2.sln  eigen.8.mesh  eigen.8.sln  mesh.4
data/2d/: eigen.4.sln
shaders/: compute-surface.glsl  shape.glsl  surface.glsl
src/: CMakeLists.txt  buffer.hpp  main.cpp  palette.cpp  palette.hpp  render.cpp  render.hpp  utility.cpp  utility.hpp
src/cutplane/: compute.glsl  cutmesh.cpp  cutmesh.hpp  draw.glsl  lines.glsl  march.glsl  tables.hpp  voxelize.glsl
src/input/: input-mfem.cpp  input-mfem.hpp  input.hpp
src/shape/: shape.cpp  shape.glsl  shape.hpp
src/surface/: draw.glsl  lines.glsl  surface.cpp  surface.hpp  tesselate.glsl
